--- a/package.json
+++ b/package.json
@@ -10,20 +10,22 @@
     "react": "^17.0.2",
     "react-big-calendar": "^0.38.0",
     "react-datetime-picker": "^3.0.2",
+    "react-detect-offline": "^2.4.5",
     "react-dom": "^17.0.2",
     "react-modal": "^3.11.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "sweetalert2": "^11.1.9"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && yarn PWA",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "PWA": "workbox injectManifest"
   },
   "eslintConfig": {
     "extends": "react-app"
